// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claim offer store action: ADD_SERIALIZED_CLAIM_OFFER 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "CLAIM_REQUEST_FAIL",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store action: CLAIM_OFFER_SHOW_START 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store action: HYDRATE_CLAIM_OFFERS_SUCCESS 1`] = `
Object {
  "pairwiseIdentifier1": Object {
    "uid": "{}",
  },
}
`;

exports[`claim offer store action: RESET_CLAIM_REQUEST_STATUS 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store claim offer is accepted 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is ignored 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is received 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is rejected 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "REJECTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is shown 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "SHOWN",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is fail 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "CLAIM_REQUEST_FAIL",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is sent 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "SENDING_CLAIM_REQUEST",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is success 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "CLAIM_REQUEST_SUCCESS",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store should correctly calculate initial state 1`] = `
Object {
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store should reset claim offer store, if RESET action is raised 1`] = `
Object {
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`convertClaimRequestToEdgeClaimRequest should convert correctly 1`] = `
Object {
  "blinded_ms": Object {
    "prover_did": "userPairwiseDid",
    "u": "u",
    "ur": "ur",
  },
  "from_did": "userPairwiseDid",
  "issuer_did": "issuer_did",
  "mid": "1",
  "msg_type": "credReq",
  "schema_seq_no": 12,
  "tid": "1",
  "to_did": "remoteDid",
  "version": "0.1",
}
`;
